--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: GLORB User Guide
 description: User resources for the GLORB smart lamp
 theme: jekyll-theme-cayman
-baseurl: "/GLORB-User-Guide"
+# baseurl: "/GLORB-User-Guide"  # Removed for custom domain
 
 # Navigation
 header_pages:
